virt/netpol_demo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal
spec:
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-cnv
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
    ports:
    - port: 80
      protocol: TCP
  podSelector:
    matchLabels:
      app: webserver
  policyTypes:
  - Ingress
